# go-ontology

./: pyproject.toml
.github/workflows/: auto-pr.yml  qc.yml
src/biochebi/: chebi_pH7_3_mapping.tsv
src/design_patterns/: biosynthetic_process.tsv  catabolic_process.tsv  chemical_transport.tsv  involved_in_x_y.tsv  negative_regulation.tsv  positive_regulation.tsv  regulation.tsv  regulation_by.tsv
src/ontology/imports/: go-pattern-conformance.ttl
