[tool.poetry]
name = "go"
version = "0.1.0"
description = "The GO package"
authors = ["Harshad Hegde <hegdehb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ontobot-change-agent = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
